@@ -1,6 +1,7 @@
 Running
 ------------
 - Added Kevin Robertson's Invoke-SMBExec.ps1
+- Update Invoke-DCOM
 
 10/29/2017
 ------------
